css/style.css
:root {
    /*colors*/
    --dark-red: #562c2cff;
    --med-red: #a4402dff;
    --light-red: #f2542dff;
    --dark-neutral: #F49A74;
    --neutral-color: #f5dfbb;
    --light-green: #0e9594ff;
    --med-green: #108585ff;
    --dark-green: #127475ff;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    overflow: auto;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

/* Page Background */

body {
    background: var(--neutral-color);
    color: var(--dark-red);
    max-width: 100vw;
}



/* header */

.header {
    display: flex;
    justify-content: space-between;
    background-color: var(--dark-red);
    color: var(--light-green);
    padding: 1rem 2rem;
}

.header div {
    display: flex;
    /* grid-template-columns: repeat(3, 1fr); */
}

.header>h1 {
    font-size: 2rem;
    line-height: 1.6;
}

/* nav-bar and main */
.container {
    display: grid;
    grid-template-columns: minmax(min-content, 0.2fr) 1fr;
    min-height: 100vh;
}

/* nav-bar styling */
.navbar {
    background-color: var(--dark-green);
    color: var(--neutral-color);
    padding: 1rem;
    gap: 1rem;
}

.nav-list a {
    color: var(--neutral-color);
    text-decoration: none;
    padding: 0.5rem;
    border-radius: 1rem;
}

.nav-list a:hover {
    background-color: var(--light-green);
}

/* main dashboard */
.card,
.cards {
    display: grid;
    gap: 1rem;
    padding: 1rem;
}

.cards {
    grid-template-columns: repeat(3, 1fr);
}

.card {
    grid-template-rows: 2rem 1fr 2fr;
    align-items: center;
    justify-items: center;
    border: solid;
    border-radius: 0.5rem;
    text-align: center;
}

.card p {
    font-size: 1.4rem;
}

.card img {
    width: 10vw;
    max-width: 8rem;
}

.card ul {
    list-style: none;
}

.card li {
    padding: 1rem;
    /* 1rem change from 0.5 rem for aesthetics */
    margin: 1rem;
    border-radius: 1rem;
    background-color: var(--dark-neutral);
}

@media screen and (max-width:1024px) {
    .card li {
        height: 4em;
    }
}

@media screen and (max-width:820px) {
    .cards {
        grid-template:
            "card" auto
            "card" auto
            "card" auto;
    }

    .card>p {
        grid-area: title;
    }

    .card>img {
        grid-area: image;
    }

    .card>ul {
        grid-area: list;
    }

    .card {
        display: grid;
        grid-template-rows: 1fr 1fr;
        grid-template-areas:
            'title list'
            'image list';
    }

    .card>* {
        overflow: hidden;
    }
}

/* phone screen size */
@media screen and (max-width:600px) {
    .card {
        grid-template-rows: auto 1fr;
        grid-template-areas:
            'title'
            'list';
    }

    .card {
        justify-content: center;
    }

    .card>ul {
        width: 100%;
    }

    .card>img {
        display: none;
    }
}

/* footer */

footer {
    display: grid;
    grid-template-columns: 2fr 3fr;
    padding: 1rem;
    font-size: 0.8rem;
}

footer a {
    text-decoration: none;
    color: var(--dark-red);
    padding: 0.5rem;
}

footer a:hover {
    background-color: var(--dark-neutral);
}

#credits {
    display: flex;
    flex-direction: column;
}

/* footer with no credits */

footer:not(:has(#credits)) {
    display: flex;
    justify-content: center;
}

/* About Me Page */

/* Background */

#about-page {
    background: url(../images/combined-background.png);
    background-size: 100vw;
    /* 101 due to image overlap issue */
}

/* to see the background image */
.transparent-color {
    background-color: rgba(245, 223, 187, 0.8);
}

/*
large paragraph
*/

.text-container {
    padding: 3rem;
    column-count: 2;
    min-height: 100vh;
}

.text-container h1 {
    column-span: all;
}

@media screen and (max-width: 600px) {
    .text-container {
        column-count: 1;
    }
}

/* Contact Page */

/*
Business Logos
*/

.logo-card {
    display: grid;
    place-items: center;
    grid-template-rows: 1fr 1fr;
    border: solid;
    border-radius: 1rem;
}

img.logo {
    width: 10rem;
}

